<resources>
    <string name="Control_gestures">Try control gestures:</string>
    <string name="Folders">Folders</string>
    <string name="_current_chapter">Current chapter</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_eink_mode">Disable animations in menus, dialogs and windows; Disable page turning animations; Set the book reading background to pure white and the text color to true black.</string>
    <string name="ad_tip">"The free version has a few ads, but it won't show any ads while you start reading (till you close the book or exit the reader)."</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="add_catalog">Add new catalog</string>
    <string name="add_new_bookmark">Add new bookmark</string>
    <string name="add_to_desktop">Shortcut to Home Screen</string>
    <string name="add_to_favorites">Add to My Favorites</string>
    <string name="add_to_group">Add to Group</string>
    <string name="adjust_brightness_tip">Tip: long tap the bottom-left corner for more accurate control.</string>
    <string name="adjust_fontsize_by_side">Swipe right edge of screen to adjust font size</string>
    <string name="ads_removed_until_time">Ads removed till %s</string>
    <string name="advance">Advance</string>
    <string name="after_open_book">After open a book:</string>
    <string name="album">Album</string>
    <string name="align_justified">Justified Alignment</string>
    <string name="all_fonts">All Fonts</string>
    <string name="allow_scroll_horizontally">Allow fling horizontally to turn page</string>
    <string name="alltime">All</string>
    <string name="alpha">Alpha</string>
    <string name="amoled_mode">Use AMOLED dark mode</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="annot_color">Color</string>
    <string name="annot_edit">poptext</string>
    <string name="annot_lock">Lock</string>
    <string name="annot_perform">Perform</string>
    <string name="annot_property">property</string>
    <string name="annot_remove">remove</string>
    <string name="annotation">Note</string>
    <string name="annotation_failed">Add annotation failed!</string>
    <string name="app">App</string>
    <string name="app_invites">Invites</string>
    <string name="app_language_change_tip">Google Play only distributes installation with English and your local language packages now, if you want to change App language to others, please set system language to the target language firstly, then reinstall the reader from Google Play.</string>
    <string name="app_name">Moon+ Reader Pro</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arbitrary_order_support_hint">"Arbitrary order supports Sort By Book Title only, doesn't support current sort type."</string>
    <string name="asia_language">East-Asian Language Alignment</string>
    <string name="auto">Auto</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="auto_dual_for_foldable">Automatic dual page mode for foldable phone</string>
    <string name="auto_import_new_books">Import new books in selected folders to the shelf automatically</string>
    <string name="auto_scroll_control">Auto scroll:</string>
    <string name="auto_sensor_failed_tip">Please enable system Auto-Rotate screen firstly before you set screen orientation to Auto(Sensor)</string>
    <string name="auto_theme">Automatic day night mode switch</string>
    <string name="auto_theme_option1">Enable time</string>
    <string name="auto_theme_option2">New brightness</string>
    <string name="auto_theme_tip1">Condition: previous reading was at night</string>
    <string name="auto_theme_tip2">Condition: resume reading</string>
    <string name="available_formats">Available formats:</string>
    <string name="back_key">Back Key</string>
    <string name="background_color">Background Color</string>
    <string name="background_colorv">Background Color</string>
    <string name="background_image">Background Image</string>
    <string name="background_imagev">Background Image</string>
    <string name="backup">Backup</string>
    <string name="backup_book_scope">(Scope: All books on the shelf and first 20 books in recent list)</string>
    <string name="backup_failed">Backup Failed</string>
    <string name="backup_folder">Backup to:</string>
    <string name="backup_in_wifi">Backup with Wi-Fi only</string>
    <string name="backup_succes">Backup successful</string>
    <string name="backup_to">Backup To:</string>
    <string name="backup_too_big_to_upload">The backup file will be too big to upload to cloud, please backup to local storage, then upload to cloud via the cloud App manually instead. Do you still want to try to backup to cloud directly?</string>
    <string name="battery_optmization_tip">Please add the reader and TTS engine to the system battery Not optimized list and allow the app notification permission so that the reader can continue TTS in the background when the screen is turned off.</string>
    <string name="biometricprompt_finger_add">Please add fingerprints first.</string>
    <string name="biometricprompt_finger_hw_unavailable">Fingerprint not available</string>
    <string name="biometricprompt_fingerprint_verification">Fingerprint Verification</string>
    <string name="biometricprompt_verify_error_no_hardware">This device does not support fingerprint recognition.</string>
    <string name="biometricprompt_verify_failed">Verification failure</string>
    <string name="biometricprompt_verify_fingerprint">Please verify your fingerprints.</string>
    <string name="biometricprompt_verify_success">Verification success</string>
    <string name="biometricprompt_verify_usepwd">Enter password</string>
    <string name="bluelight_filter">Bluelight filter for eye care</string>
    <string name="bluelight_filter_enabled">Bluelight filter enabled.</string>
    <string name="bluelight_filter_opacity">Opacity</string>
    <string name="bold">Bold</string>
    <string name="book_author">Book Author</string>
    <string name="book_cover">Book Cover</string>
    <string name="book_description">Description</string>
    <string name="book_favorite">Favorite</string>
    <string name="book_favorite_hint">Category (Optional)</string>
    <string name="book_found">Search Results:</string>
    <string name="book_info">Book information</string>
    <string name="book_information">Book Information</string>
    <string name="book_is_imported">imported</string>
    <string name="book_link_to_new_path">%d books linked to the new location</string>
    <string name="book_tags">Tags</string>
    <string name="book_title">Book Title</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_add">Add to Bookmarks</string>
    <string name="bookmark_already_added">Bookmark already exists</string>
    <string name="bookmark_error">Error: Cannot add bookmark</string>
    <string name="bookmark_label">Page: %1$d</string>
    <string name="bookmark_manually">Edit bookmark name before create</string>
    <string name="bookmark_remove_error">Error: Cannot delete bookmark</string>
    <string name="bookmark_show">Show Bookmarks</string>
    <string name="bookmark_success">Bookmark (%1$s) added successfully.</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="books_in_favorite">Books in favorites</string>
    <string name="brightness">Brightness:</string>
    <string name="copy_text_to_clipboard">Copy text to clipboard</string>
    <string name="cover_with_progress">Show reading progress on book cover</string>
    <string name="day_theme">Day Theme</string>
    <string name="eink_mode">E-ink screen mode</string>
    <string name="fab_option">Show Continue Reading floating button</string>
    <string name="fingerprint_recognition">Fingerprint recognition</string>
    <string name="float_fav_selector">Use float favorites selector</string>
    <string name="follow_sys_dark">Follow system dark mode</string>
    <string name="highlight_color">Color</string>
    <string name="highlight_texts">Highlight texts</string>
    <string name="import_ebooks2">Import Books</string>
    <string name="keep_screen_awake">Keep screen awake</string>
    <string name="language">Language</string>
    <string name="main_folder">Main Folder</string>
    <string name="my_shelf">My Shelf</string>
    <string name="my_shelf_woody">Use woody background</string>
    <string name="myfiles">My Files</string>
    <string name="night_theme">Night Theme</string>
    <string name="open_book_anim">Show open book animation</string>
    <string name="open_lastfile">Open last file at startup</string>
    <string name="password_protect">Password protect at startup</string>
    <string name="restore">Restore</string>
    <string name="search_backward">Backward only (been read)</string>
    <string name="search_case_sensitive">Case sensitive</string>
    <string name="search_forward">Forward only (unread)</string>
    <string name="search_hint">(Support regular expression search)</string>
    <string name="search_whole_word">Whole word</string>
    <string name="share_to_readwise">Share new highlights and notes to Readwise automatically</string>
    <string name="shelf_db_empty">Empty Shelf</string>
    <string name="show_hidden_files">List hidden files and folders</string>
    <string name="slideshow_interval">Slideshow interval</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="squiggly">Squiggly</string>
    <string name="status_bar">Show mini status bar when reading</string>
    <string name="strikeout">StrikeOut</string>
    <string name="sync_to_cloud">Sync to cloud...</string>
    <string name="sync_via_cloud">Sync via %s</string>
    <string name="transparent">Transparent</string>
    <string name="tts_interval_time">millisecond</string>
    <string name="underline">Underline</string>
    <string name="use_dynamic_color">Use Android dynamic theme colors</string>
</resources>