<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/small_options_background" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckBox android:id="@id/backwardcb" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/search_backward" />
            <CheckBox android:id="@id/forwardcb" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/search_forward" />
            <CheckBox android:id="@id/casecb" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/search_case_sensitive" />
            <CheckBox android:id="@id/wholecb" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/search_whole_word" />
            <TextView android:textSize="14.0sp" android:id="@id/TextView02" android:paddingLeft="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/search_hint" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>