<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/headerMain" layout="@layout/pref_header_main" />
    <ScrollView android:id="@id/sv" android:background="@color/options_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/pvTopLine" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_marginTop="4.0dip" android:text="@string/my_shelf" style="@style/ShelfTipTitle" />
            <LinearLayout style="@style/RoundLay">
                <LinearLayout style="@style/SwitchLinearLayout">
                    <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/woody" android:text="@string/my_shelf_woody" style="@style/MySwitch" />
                    <ImageButton android:id="@id/pmWoody" style="@style/SwitchImageButton" />
                </LinearLayout>
                <View android:id="@id/floatFav2" style="@style/SwitchSplitter" />
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/floatFav" android:paddingRight="42.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="12.0dip" android:text="@string/float_fav_selector" style="@style/MySwitch" />
                <View style="@style/SwitchSplitter" />
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/coverProgress" android:paddingRight="42.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="12.0dip" android:text="@string/cover_with_progress" style="@style/MySwitch" />
                <View style="@style/SwitchSplitter" />
                <LinearLayout style="@style/SwitchLinearLayout">
                    <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/pmAuoImport" android:text="@string/auto_import_new_books" style="@style/MySwitch" />
                    <ImageButton android:id="@id/pmImportFolders" style="@style/SwitchImageButton" />
                </LinearLayout>
                <View style="@style/SwitchSplitter" />
                <LinearLayout android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/switch_lay_height">
                    <TextView android:textSize="15.0sp" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="8.0dip" android:text="@string/main_folder" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/dialog_main_text" android:layout_gravity="center_vertical" android:id="@id/folderEdit" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="/sdcard/Books" android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_height="@dimen/switch_lay_height" android:layout_marginTop="0.0dip" style="@style/RoundLay">
                <TextView android:textSize="15.0sp" android:textColor="@color/dialog_main_text" android:gravity="center" android:id="@id/importTv" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/import_ebooks2" android:layout_weight="50.0" />
                <View android:background="#88888888" android:layout_width="1.0px" android:layout_height="fill_parent" />
                <TextView android:textSize="15.0sp" android:textColor="@color/dialog_main_text" android:gravity="center" android:id="@id/dbEmpty" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/shelf_db_empty" android:layout_weight="50.0" />
                <View android:background="#88888888" android:layout_width="1.0px" android:layout_height="fill_parent" />
                <TextView android:textSize="15.0sp" android:textColor="@color/dialog_main_text" android:gravity="center" android:id="@id/shelfCover" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="Book Cover(Size)" android:layout_weight="50.0" />
            </LinearLayout>
            <TextView android:text="@string/myfiles" style="@style/ShelfTipTitle" />
            <LinearLayout style="@style/RoundLay">
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/showHidden" android:paddingRight="42.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="12.0dip" android:text="@string/show_hidden_files" style="@style/MySwitch" />
            </LinearLayout>
            <TextView android:text="@string/highlight_color" style="@style/ShelfTipTitle" />
            <LinearLayout style="@style/RoundLay">
                <LinearLayout style="@style/SwitchLinearLayout">
                    <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/pmDynamicColor" android:text="@string/use_dynamic_color" style="@style/MySwitch" />
                    <ImageButton android:id="@id/pmDynamic" style="@style/SwitchImageButton" />
                </LinearLayout>
                <View style="@style/SwitchSplitter" />
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/pmAmoled" android:paddingRight="42.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="12.0dip" android:text="@string/amoled_mode" style="@style/MySwitch" />
                <View android:id="@id/pmSysDark2" style="@style/SwitchSplitter" />
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/pmSysDark" android:paddingRight="42.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="12.0dip" android:text="@string/follow_sys_dark" style="@style/MySwitch" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/syncLay" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/synvTv" android:text="@string/sync_to_cloud" style="@style/ShelfTipTitle" />
                <LinearLayout style="@style/RoundLay">
                    <LinearLayout style="@style/SwitchLinearLayout">
                        <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/pmSyncDropbox" android:text="@string/sync_via_cloud" style="@style/MySwitch" />
                        <ImageButton android:id="@id/pmSetDropbox" style="@style/SwitchImageButton" />
                    </LinearLayout>
                    <View android:id="@id/gdriveSplit" style="@style/SwitchSplitter" />
                    <LinearLayout android:id="@id/gdriveLay" style="@style/SwitchLinearLayout">
                        <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/pmSyncGdrive" android:text="@string/sync_via_cloud" style="@style/MySwitch" />
                        <ImageButton android:id="@id/pmSetGdrive" style="@style/SwitchImageButton" />
                    </LinearLayout>
                    <View style="@style/SwitchSplitter" />
                    <LinearLayout style="@style/SwitchLinearLayout">
                        <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/pmSyncWebDav" android:text="@string/sync_via_cloud" style="@style/MySwitch" />
                        <ImageButton android:id="@id/pmSetWebDav" style="@style/SwitchImageButton" />
                    </LinearLayout>
                    <View style="@style/SwitchSplitter" />
                    <LinearLayout style="@style/SwitchLinearLayout">
                        <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/pmSyncFtp" android:text="@string/sync_via_cloud" style="@style/MySwitch" />
                        <ImageButton android:id="@id/pmSetFtp" style="@style/SwitchImageButton" />
                    </LinearLayout>
                    <TextView android:textSize="14.5sp" android:layout_gravity="right" android:id="@id/gdriveTip" android:layout_width="wrap_content" android:layout_marginBottom="13.0dip" android:text="Google Drive?" style="@style/ShelfTipTitle" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:text="@string/app" style="@style/ShelfTipTitle" />
            <LinearLayout style="@style/RoundLay">
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/fabCheck" android:paddingRight="42.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="12.0dip" android:text="@string/fab_option" style="@style/MySwitch" />
                <View android:id="@id/pmOpenAnimat2" style="@style/SwitchSplitter" />
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/pmOpenAnimat" android:paddingRight="42.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="12.0dip" android:text="@string/open_book_anim" style="@style/MySwitch" />
                <View android:id="@id/pmPasswordCheck2" style="@style/SwitchSplitter" />
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/pmPasswordCheck" android:paddingRight="42.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="12.0dip" android:text="@string/password_protect" style="@style/MySwitch" />
                <View android:id="@id/fingerCheck2" style="@style/SwitchSplitter" />
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/fingerCheck" android:paddingRight="42.0dip" android:layout_marginLeft="48.0dip" android:layout_marginRight="12.0dip" android:text="@string/fingerprint_recognition" style="@style/MySwitch" />
                <View style="@style/SwitchSplitter" />
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@id/pmEink" android:paddingRight="42.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="12.0dip" android:text="@string/eink_mode" style="@style/MySwitch" />
                <View style="@style/SwitchSplitter" />
                <LinearLayout android:orientation="horizontal" android:id="@id/languageLay" android:paddingLeft="24.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/switch_lay_height">
                    <TextView android:textSize="15.0sp" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/language" />
                    <com.flyersoft.views.MySpinner android:entries="@array/languages" android:id="@id/pmLanguage" android:layout_marginLeft="10.0dip" android:layout_marginRight="42.0dip" style="@style/PrefControlSpinner" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/backupLay" android:paddingLeft="@dimen/button_margin" android:paddingTop="12.0dip" android:paddingRight="@dimen/button_margin" android:paddingBottom="@dimen/footer_button_bottom_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/backupB" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/backup" android:layout_weight="5.0" style="@style/MyButton" />
                <Button android:layout_gravity="center" android:id="@id/restoreB" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/restore" android:layout_weight="5.0" style="@style/MyButton" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>