<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBox android:id="@id/cb1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bookmark_manually" />
    <CheckBox android:id="@id/cb3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open_lastfile" />
    <CheckBox android:id="@id/cb2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sort_by_time" />
    <View android:layout_width="fill_parent" android:layout_marginTop="14.0dip" android:layout_marginBottom="14.0dip" style="@style/SplitterLight" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <CheckBox android:id="@id/cb4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_to_readwise" android:layout_weight="5.0" />
        <ImageButton android:layout_gravity="center|right" android:id="@id/cb4Option" android:tag="force" android:background="?selectableItemBackground" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:clickable="true" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="6.0dip" android:src="@drawable/options_dark" android:scaleType="fitCenter" />
    </LinearLayout>
</LinearLayout>