<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/small_options_background" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="#ffffffff" android:gravity="center" android:id="@id/TextView02" android:paddingLeft="4.0dip" android:paddingRight="2.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/brightness" />
                <SeekBar android:id="@id/screenBrightness" android:paddingRight="2.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="99" android:layout_weight="5.0" />
                <CheckBox android:id="@id/autoCheck" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/auto" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="8.0dip">
                <TextView android:textColor="#ffffffff" android:gravity="center" android:paddingLeft="4.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/slideshow_interval" />
                <EditText android:id="@id/interval" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3" android:inputType="number" />
                <TextView android:textColor="#ffffffff" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/tts_interval_time" />
            </LinearLayout>
            <View android:id="@id/view1" android:background="#ff666666" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="14.0dip" android:layout_marginBottom="14.0dip" />
            <CheckBox android:textColor="#ffffffff" android:id="@id/statusBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/status_bar" android:layout_weight="5.0" />
            <CheckBox android:textColor="#ffffffff" android:id="@id/keepAwake" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/keep_screen_awake" android:layout_weight="5.0" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>